# internal/server/server.go
@@ -13,6 +13,7 @@ import (
 	"github.com/parlorhub/api-core/internal/modules/auth"
 	"github.com/parlorhub/api-core/internal/modules/auth/session"
 	contactform "github.com/parlorhub/api-core/internal/modules/contact_form"
+	"github.com/parlorhub/api-core/internal/modules/onboarding"
 	"github.com/parlorhub/api-core/internal/modules/sso"
 )
 
@@ -22,12 +23,12 @@ type Server struct {
 	db                 database.Service
 	authHandler        *auth.AuthHandler
 	contactFormHandler *contactform.ContactFormHandler
+	onboardingHandler  *onboarding.OnboardingHandler
 	rbacMiddleware     *rbac.RbacMiddleware
 	ssoHandler         *sso.SSOHandler
 }
 
 func NewServer() *http.Server {
-	// Initialize logger first
 	logger.Init()
 
 	port, _ := strconv.Atoi(os.Getenv("PORT"))
@@ -40,6 +41,7 @@ func NewServer() *http.Server {
 
 	authHandler := auth.NewAuthHandler(db.GetDB(), sessionService)
 	contactFormHandler := contactform.NewContactFormHandler(db.GetDB())
+	onboardingHandler := onboarding.NewOnboardingHandler(db.GetDB())
 	rbacMiddleware := rbac.NewRbacMiddleware(db.GetDB())
 
 	NewServer := &Server{
@@ -49,6 +51,7 @@ func NewServer() *http.Server {
 		authHandler:        authHandler,
 		rbacMiddleware:     rbacMiddleware,
 		contactFormHandler: contactFormHandler,
+		onboardingHandler:  onboardingHandler,
 		ssoHandler:         sso.NewSSOHandler(db.GetDB(), authHandler.GetService()),
 	}
 
